[tool.poetry]
name = "sharpy-addons"
version = "0.1.0"
description = ""
authors = ["Raoni Campos <ratosh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
burnysc2 = {git = "https://github.com/BurnySc2/python-sc2.git"}

[tool.poetry.dev-dependencies]
atomicwrites = "^1.4.0"
pytest = "^7.1.1"
pytest-asyncio = "^0.18.3"
pytest-benchmark = "^3.4.1"
pytest-cov = "^3.0.0"
codecov = "^2.1.12"
hypothesis = "^6.23.1"
Sphinx = "^4.2.0"
sphinx-autodoc-typehints = "^1.12.0"
Pillow = "^8.3.2"
matplotlib = "^3.4.3"
radon = "^5.1.0"
pre-commit = "^2.15.0"
yapf = "^0.32.0"
mypy = "^0.942"
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
